// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Payment Method should render fallback ratepay payment method 1`] = `
<ul
  id="paymentMethodsList"
>
  <li
    class="paymentMethod"
  >
    
    
    <input
      id="rb_ratepay"
      name="brandCode"
      type="radio"
      value="ratepay"
    />
    
    
    <img
      class="paymentMethod_img"
      src="/mocked_path/ratepay.png"
    />
    
    
    <label
      for="rb_ratepay"
      id="lb_ratepay"
    >
      mocked_name
    </label>
    
  
    <p>
      mocked_description
    </p>
    <div
      class="additionalFields"
      id="component_ratepay"
      style="display:none"
    >
      <span
        class="adyen-checkout__label"
      >
        Gender
      </span>
      
    
      <select
        class="adyen-checkout__input"
        id="genderInput"
      >
        
        
        <option
          value="MALE"
        >
          Male
        </option>
        
        
        <option
          value="FEMALE"
        >
          Female
        </option>
        
    
      </select>
      
    
      <span
        class="adyen-checkout__label"
      >
        Date of birth
      </span>
      
    
      <input
        class="adyen-checkout__input"
        id="dateOfBirthInput"
        type="date"
      />
      
  
    </div>
  </li>
</ul>
`;

exports[`Render Payment Method should render payment method 1`] = `
<ul
  id="paymentMethodsList"
>
  <li
    class="paymentMethod"
  >
    
    
    <input
      id="rb_scheme"
      name="brandCode"
      type="radio"
      value="scheme"
    />
    
    
    <img
      class="paymentMethod_img"
      src="/mocked_path/card.png"
    />
    
    
    <label
      for="rb_scheme"
      id="lb_scheme"
    >
      mocked_name
    </label>
    
  
    <p>
      mocked_description
    </p>
    <div
      class="additionalFields"
      id="component_scheme"
      style="display:none"
    />
  </li>
</ul>
`;

exports[`Render Payment Method should render payment method 2`] = `
Object {
  "mocked_id": Object {
    "node": Object {
      "mocked_node": Object {
        "foo": "bar",
      },
    },
  },
  "scheme": Object {
    "node": Object {
      "mount": [MockFunction] {
        "calls": Array [
          Array [
            <div
              class="additionalFields"
              id="component_scheme"
              style="display:none"
            />,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
  },
}
`;

exports[`Render Payment Method should render stored payment method 1`] = `
<ul
  id="paymentMethodsList"
>
  <li
    class="paymentMethod"
  >
    
    
    <input
      id="rb_storedCardmocked_id"
      name="brandCode"
      type="radio"
      value="storedCardmocked_id"
    />
    
    
    <img
      class="paymentMethod_img"
      src="/mocked_path/mocked_brand.png"
    />
    
    
    <label
      for="rb_storedCardmocked_id"
      id="lb_storedCardmocked_id"
    >
      mocked_name ************1234
    </label>
    
  
    <p>
      mocked_description
    </p>
    <div
      class="additionalFields"
      id="component_storedCardmocked_id"
      style="display:none"
    />
  </li>
</ul>
`;

exports[`Render Payment Method should render stored payment method 2`] = `
Object {
  "mocked_id": Object {
    "node": Object {
      "mocked_node": Object {
        "foo": "bar",
      },
    },
  },
  "storedCardmocked_id": Object {
    "isValid": true,
    "node": Object {
      "mount": [MockFunction] {
        "calls": Array [
          Array [
            <div
              class="additionalFields"
              id="component_storedCardmocked_id"
              style="display:none"
            />,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
  },
}
`;
